Few correction done

--- a/lessons/05-html-linking/about.html
+++ b/lessons/05-html-linking/about.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<head>
-  <title>About</title>
-</head>
+<html>
+  <head>
+    <title>About</title>
+  </head>
 
-<body>
-  <h1>About</h1>
-  <a href="index.html"><strong>Home</strong><br /></a>
-  <a href="news.html"><strong>News</strong><br /></a>
-  <a href="about.html"><strong>About</strong><br /></a>
-  <a href="Contact.html"><strong>Contact</strong><br /><br /></a>
-  <a href="documents/resume.html">View my Resume</a>
-</body>
+  <body>
+    <h1>About</h1>
+    <ul>
+      <li>
+        <a href="index.html"><strong>Home</strong></a>
+      </li>
+      <li>
+        <a href="news.html"><strong>News</strong></a>
+      </li>
+      <li>
+        <a href="about.html"><strong>About</strong></a>
+      </li>
+      <li>
+        <a href="Contact.html"><strong>Contact</strong></a>
+      </li>
+    </ul>
+    <a href="documents/resume.html">View my Resume</a>
+  </body>
+</html>
