--- a/lessons/05-html-linking/contact.html
+++ b/lessons/05-html-linking/contact.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<head>
-  <title>Contact</title>
-</head>
+<html>
+  <head>
+    <title>Contact</title>
+  </head>
 
-<body>
-  <h1>Contact</h1>
-  <a href="index.html"><strong>Home</strong><br /></a>
-  <a href="news.html"><strong>News</strong><br /></a>
-  <a href="about.html"><strong>About</strong><br /></a>
-  <a href="Contact"><strong>Contact</strong><br /><br /></a>
-  <a href="mailto:bash@hotmail.com">email me</a>
-  <a href="tel:+16396784567">Contact me</a>
-</body>
+  <body>
+    <h1>Contact</h1>
+    <ul>
+      <li>
+        <a href="index.html"><strong>Home</strong></a>
+      </li>
+      <li>
+        <a href="news.html"><strong>News</strong></a>
+      </li>
+      <li>
+        <a href="about.html"><strong>About</strong></a>
+      </li>
+      <li>
+        <a href="Contact.html"><strong>Contact</strong></a>
+      </li>
+    </ul>
+    <p>
+      <a href="mailto:bash@hotmail.com"><strong>Contact me</strong></a>
+    </p>
+  </body>
+</html>
