--- a/lessons/05-html-linking/news.html
+++ b/lessons/05-html-linking/news.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>News</title>
+  </head>
 
-<head>
-  <title>News</title>
-</head>
-
-<body>
-  <h1>News</h1>
-  <a href="index.html"><strong>Home</strong><br /></a>
-  <a href="news.html"><strong>News</strong><br /></a>
-  <a href="about.html"><strong>About</strong><br /></a>
-  <a href="Contact.html"><strong>Contact</strong><br /><br /></a>
-  <a href="https://thestarphoenix.com"
-    ><strong>Go to The StarPhoenix</strong></a
-  >
-</body>
+  <body>
+    <h1>News</h1>
+    <ul>
+      <li>
+        <a href="index.html"><strong>Home</strong></a>
+      </li>
+      <li>
+        <a href="news.html"><strong>News</strong></a>
+      </li>
+      <li>
+        <a href="about.html"><strong>About</strong></a>
+      </li>
+      <li>
+        <a href="Contact.html"><strong>Contact</strong></a>
+      </li>
+    </ul>
+    <p>
+      <a href="https://thestarphoenix.com"
+        ><strong>Go to The StarPhoenix</strong></a
+      >
+    </p>
+  </body>
+</html>
