--- a/lessons/05-html-linking/documents/resume.html
+++ b/lessons/05-html-linking/documents/resume.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
-<head>
-  <title>Resume</title>
-</head>
+<html>
+  <head>
+    <title>Resume</title>
+  </head>
 
-<body>
-  <h1>Resume</h1>
-  <a href="../index.html"><strong>Home</strong><br /></a>
-  <a href="../news.html"><strong>News</strong><br /></a>
-  <a href="../about.html"><strong>About</strong><br /></a>
-  <a href="../contact.html"><strong>Contact</strong><br /></a>
+  <body>
+    <h1>Resume</h1>
+    <ul>
+      <li>
+        <a href="../index.html"><strong>Home</strong></a>
+      </li>
+      <li>
+        <a href="../news.html"><strong>News</strong></a>
+      </li>
+      <li>
+        <a href="../about.html"><strong>About</strong></a>
+      </li>
+      <li>
+        <a href="../contact.html"><strong>Contact</strong></a>
+      </li>
+    </ul>
 
-  <h1>Personal Info</h1>
-  <hr style="border:1px solid grey;" />
-  <p><strong>Name:</strong> Basharah Batool</p>
-  <p><strong>Address:</strong>214A, 115 Reid Road</p>
-  <p><strong>Phone:</strong>639-345-6789</p>
+    <h1>Personal Info</h1>
+    <hr style="border:1px solid grey;" />
+    <p><strong>Name:</strong> Basharah Batool</p>
+    <p><strong>Address:</strong>214A, 115 Reid Road</p>
+    <p><strong>Phone:</strong>639-345-6789</p>
 
-  <h1>Experience</h1>
-  <hr style="border:1px solid grey;" />
-  <p><strong>U of S</strong>-Jan 2018-Aug 2018</p>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, ullam in
-    eos harum autem doloribus sunt odit vitae quas vero totam delectus ipsum
-    fugiat voluptatibus sapiente quis consequatur veritatis.
-  </p>
-</body>
+    <h1>Experience</h1>
+    <hr style="border:1px solid grey;" />
+    <p><strong>U of S</strong>-Jan 2018-Aug 2018</p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, ullam
+      in eos harum autem doloribus sunt odit vitae quas vero totam delectus
+      ipsum fugiat voluptatibus sapiente quis consequatur veritatis.
+    </p>
+  </body>
+</html>
