--- a/lessons/19-js-variables/index.html
+++ b/lessons/19-js-variables/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-        <script>
-            "use strict";
-            let city;
-            let newCity;
-            city ="Saskatoon";
-            newCity =city;
-            city ="Regina";
-            console.log("City: ", city);
-            console.log("New city: ", newCity);
+        <script scr ="index.js";>
+           // "use strict";
+            //let city;
+            //let newCity;
+            //city ="Saskatoon";
+            //newCity =city;
+            //city ="Regina";
+            //console.log("City: ", city);
+            //console.log("New city: ", newCity);
             </script>
     </head>
 </html>
