Completes 05-html-links

--- a/lessons/05-html-linking/Documents/resume.html
+++ b/lessons/05-html-linking/Documents/resume.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	<title>Resume</title>
-  </head>
-  <body >
-   <h1>Resume</h1>
-   <li>
-        <ol>
-            <a href="../index.html"target="_blank">Home</a>
-            <a href="News.html"target="_blank">News</a>
-            <a href="About.html"target="_blank">About</a>
-            <a href="contact/contact.html"target="_blank">Contact</a>
-        </ol>
-    </li>
-    <p>EDUCATION
-            PhD in English May 20xx
-            University of Illinois at Urbana-Champaign
+    <head>
+        <title>Resume</title>
+    </head>
+    <body >
+        <ul>
+          <li> <a href="index.html"target="_blank">Home</a></li>
+          <li><a href="News.html"target="_blank">News</a></li>
+          <li><a href="About.html"target="_blank">About</a></li> 
+          <li> <a href="contact.html"target="_blank">Contact</a></li>
+      </ul>
+          <h1>RESUME</h1>>
+            
+      <p>EDUCATION
+              PhD in English May 20xx <br>
+            University of Illinois at Urbana-Champaign <br>
             Dissertation title: “Down on the Farm: World War One and the Emergence of Literary
-            Modernism in the American South”
+            Modernism in the American South”<br>
             Committee: Margaret Black, Naomi Blue, John Jay, Robert Roberts (Chair)
-            MA in English 20xx
-            University of Illinois at Urbana-Champaign
+            MA in English 20xx <br>
+            University of Illinois at Urbana-Champaign <br>
             BA in English and Communications, summa cum laude 20xx
-            Butler University, Indianapolis, IN
+            Butler University, Indianapolis, <br>
             TEACHING & ADVISING
             Composition Instructor 20xx-present
             Research Writing Program, University of Illinois
@@ -52,4 +51,5 @@
              Planned lessons and assignments, led discussion sections, graded papers and exams.
              Organized and led group discussions on social and academic issues.
             CV </p>
-</body>
+    </body>
+</html>
