--- a/lessons/05-html-linking/contact.html
+++ b/lessons/05-html-linking/contact.html
@@ -12,6 +12,6 @@
                <li><a href="About.html"target="_blank">About</a></li> 
                <li> <a href="contact.html"target="_blank">Contact</a></li>
             </ul>
-        <p><a href="documents/resume.html"target="_blank">View my resume</a></p>
+        <p><a href="mailto:domain@example.com"target="_blank">Contact me</a></p>
     </body>
 </html>
