--- a/lessons/05-html-linking/contact.html
+++ b/lessons/05-html-linking/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About</title>
+        <title>Contact</title>
     </head>
     <body>
-        <h1>About</h1>
+        <h1>Contact</h1>
         
             <ul>
                <li> <a href="index.html"target="_blank">Home</a></li>
