--- a/lessons/05-html-linking/news.html
+++ b/lessons/05-html-linking/news.html
@@ -4,6 +4,7 @@
         <title>News</title>
       </head>
       <body >
+        <h1>News</h1>
         <ul>
           <li> <a href="index.html"target="_blank">Home</a></li>
           <li><a href="News.html"target="_blank">News</a></li>
