--- a/lessons/09-css-style-attr/index.html
+++ b/lessons/09-css-style-attr/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Style Attributes</title>
-    
   </head>
-  <body >
-    <header style="text-align: center">Homepage</header>
-   <h1>HOME OF MODEST FASHION</h1>
-  <div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, ex incidunt. Repellendus neque quis maxime ab ea repudiandae alias in, exercitationem facilis autem, quibusdam quod mollitia quaerat? Odit, beatae fugit?</p>
- 
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio possimus incidunt, recusandae corporis quae provident enim nulla aliquam ad fugiat illo ut voluptate corrupti aliquid vitae molestias quisquam animi iure.</p> 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolor obcaecati. Accusantium voluptate repudiandae iure dolores! Facilis in, consequuntur voluptatibus ex quo, vero accusamus tempora quidem laudantium voluptas inventore facere.</p>  
-  </div>   
+  <body>
+    <header style="text-align: center;" >Homepage</header>
+    <div style="text-align: right;">
+        <p style="font-style: italic;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quod voluptas incidunt, repellendus, architecto blanditiis inventore necessitatibus, minima adipisci temporibus hic veniam quia corporis ab illum sapiente rem quaerat reprehenderit?</p>
+        <p style="background-color: blue;color: rgb(255, 255, 255);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, suscipit consectetur hic doloribus laudantium eius quam sequi. Repellendus, eaque commodi. Pariatur necessitatibus impedit dolore vitae, distinctio eaque unde provident veniam.</p>
+        <p><span style="font-size: 24px;">lorem</span> ipsum dolor sit amet consectetur adipisicing elit. Ipsum similique quas harum sunt asperiores eligendi veniam, et amet, maiores dignissimos atque animi dolorem, necessitatibus laudantium inventore delectus fugit ea molestias?</p>
+    </div>
+    <p style="background-color:#FF5733;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis aperiam perspiciatis pariatur consequuntur officia laboriosam laudantium quia placeat saepe vitae mollitia aut dolorem, sint natus iusto est ex odit. Eaque.</p>
+    <p  style="text-transform: uppercase;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores repellendus quis, ipsa temporibus iste enim a amet cum et reprehenderit ratione unde earum dolore cupiditate atque distinctio ducimus natus? Alias.</p>
+    <p style="text-transform: capitalize;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, tempore? Maiores id, inventore alias reiciendis minima, ex magnam voluptatibus ut hic labore velit omnis odio doloribus est, ab nihil rem!</p>
+
+  </body>
+  </html>
