--- a/lessons/08-html-site/contact.html
+++ b/lessons/08-html-site/contact.html
@@ -38,7 +38,7 @@
           />
         </div>
         <div>
-          <Label>Message:</Label>
+          <label>Message:</label>
           <textarea
             name="message"
             id="message"
