--- a/lessons/13-css-external-files/news.html
+++ b/lessons/13-css-external-files/news.html
@@ -2,17 +2,20 @@
 <html>
 <head>
     <title>News</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
-<header>
-    <h1>News</h1>
-    <link rel="stylesheet" href="style.css" />
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a class="change-color" href="news.html">News</a>
-    </nav>
-</header<body>
+<body>
+    <header>
+        <h1>News</h1>
+    
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a class="change-color" href="news.html">News</a>
+        </nav>
+    </header>
+    
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, modi dolores
       nihil vitae dolore eius veniam debitis quia voluptates magnam aliquam,
